# open-tauri-remote-webview

./: .cargo_vcs_info.json  .gitignore  Cargo.toml  Cargo.toml.orig  LICENSE  README.md  README.zh.md  REMOTE_COMMAND.md
.github/workflows/: publish.yml
guest-js/: README.md  package-lock.json  package.json  tsconfig.json
guest-js/api/: bridge.ts  core.ts  event.ts  index.ts
guest-js/src/: bridge-init.ts  environment.ts  floating-badge.ts  logger.ts  tauri-internals.ts  ws-event.ts  ws-invoke.ts  ws.ts
macros/: Cargo.toml
macros/src/: lib.rs
src/: command_registry.rs  error.rs  lib.rs  models.rs
src/remote_ui/: emitter_ext.rs  emmiter_ext.rs  information.html  mod.rs  plugin_ext.rs  rpc_server.rs
test/vue-app/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
test/vue-app/src/: App.vue
test/vue-app/src-tauri/: Cargo.toml  tauri.conf.json
test/vue-app/src-tauri/capabilities/: default.json
test/vue-app/src-tauri/src/: lib.rs  main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
