[package]
edition = "2021"
rust-version = "1.77.2"
name = "open-tauri-remote-webview"
links = "open-tauri-remote-webview"
version = "0.0.6-alpha.5"
authors = ["DraviaVemal"]
build = "build.rs"
exclude = [
    "/examples",
    "/dist-js",
    "/guest-js",
    "/node_modules",
    "/xtask",
]
description = "A Tauri plugin that exposes the application's IPC to a web browser via WebSocket, enabling frontend development and E2E testing with standard web tools."
readme = "README.md"
license = "MIT"
repository = "https://github.com/ant-cave/open-tauri-remote-webview"

[lib]
name = "open_tauri_remote_webview"
path = "src/lib.rs"

[features]
default = ["ws"]
ws = ["hyper", "hyper-tungstenite", "hyper-util", "http-body-util", "futures"]

[dependencies.chrono]
version = "0.4"

[dependencies.open-tauri-remote-webview-macros]
path = "macros"
version = "0.0.6-alpha.5"

[dependencies.futures]
version = "0.3"
optional = true

[dependencies.http-body-util]
version = "0.1"
optional = true

[dependencies.hyper]
version = "1"
features = ["full"]
optional = true

[dependencies.hyper-tungstenite]
version = "0.18"
optional = true

[dependencies.hyper-util]
version = "0.1"
optional = true

[dependencies.serde]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.tauri]
version = "2"

[dependencies.thiserror]
version = "2"

[dependencies.tokio]
version = "1.47"
features = ["full"]

[build-dependencies.tauri-plugin]
version = "2.4.0"
features = ["build"]
