[package]
edition = "2021"
name = "open-tauri-remote-webview-macros"
version = "0.0.7-alpha.0"
description = "Proc macros for open-tauri-remote-webview"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
quote = "1"
proc-macro2 = "1"
